[package]
name = "market"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[dependencies]
strum = "0.13"
strum_macros = "0.13"
serde = "1"
serde_derive = "1"
yew = { version = "0.14.0", features = ["std_web"] }
yew-router = { git = "https://github.com/yewstack/yew_router", branch="master", features = ["std_web"] }
web_logger = "0.2"
log = "0.4.8"
wee_alloc = "0.4.5"